posiGen_FullsendBox/src/objects/SystemFunding__c.object
<CustomObject>
    <description>Created by the Cloud Converter from http://ModelMetrics.com</description>
    <fields>
        <fullName>BBFundedBy__c</fullName>
        <label>BB Funded By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBFundedDate__c</fullName>
        <label>BB Funded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BBFunded__c</fullName>
        <label>BB Funded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BBFundingSubmission__c</fullName>
        <label>BB Funding Submission #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ConsumerName__c</fullName>
        <label>Consumer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contractor__c</fullName>
        <label>Contractor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DifferenceinLegalandUtilityaddress__c</fullName>
        <label>Difference in Legal and Utility address?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DoesitagreetoTrackerAmount__c</fullName>
        <label>Does it agree to Tracker Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElectricalInspection__c</fullName>
        <label>Electrical Inspection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntergySignedAgreement__c</fullName>
        <label>Entergy Signed Agreement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExplanationofaddressesNeeded__c</fullName>
        <label>Explanation of addresses Needed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinalReviewDate__c</fullName>
        <label>Final Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinalReviewedBy__c</fullName>
        <label>Final Reviewed By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinalReviewed__c</fullName>
        <label>Final Reviewed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingIssues__c</fullName>
        <label>Funding Issues</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingReviewBy__c</fullName>
        <label>Funding Review By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingReviewDate__c</fullName>
        <label>Funding Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InQueueby__c</fullName>
        <label>In Queue by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstallAddress__c</fullName>
        <label>Install Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvertorManufacturer__c</fullName>
        <label>Invertor Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalDocumentsIssues__c</fullName>
        <label>Legal Documents Issues</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OtherIssuesandMissingDocuments__c</fullName>
        <label>Other Issues and Missing Documents</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PanelManufacturer__c</fullName>
        <label>Panel Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlacedinService__c</fullName>
        <label>Placed in Service</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PlacedinserviceCheckColumn__c</fullName>
        <label>Placed in service % Check Column</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QueueforReview__c</fullName>
        <label>Queue for Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReadyforFunding__c</fullName>
        <label>Ready for Funding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReadytofileLAreturn__c</fullName>
        <label>Ready to file LA return?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivedFrom__c</fullName>
        <label>Received From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteVisitDate__c</fullName>
        <label>Site Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SiteVisit__c</fullName>
        <label>Site Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteVisitedBy__c</fullName>
        <label>Site Visited By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SizeofSystem__c</fullName>
        <label>Size of System</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>StateTaxCredit__c</fullName>
        <label>State Tax Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittedDate__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submittedby__c</fullName>
        <label>Submitted by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubmittedtoState__c</fullName>
        <label>Submitted to State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxCreditCheckCalculated__c</fullName>
        <label>Tax Credit Check Calculated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalCost__c</fullName>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>USBankFundedDate__c</fullName>
        <label>US Bank Funded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>USBankFunded__c</fullName>
        <label>US Bank Funded</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USBankFundedby__c</fullName>
        <label>US Bank Funded by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USBankReadytoFund__c</fullName>
        <label>US Bank Ready to Fund</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WDGGID__c</fullName>
        <label>WDGG ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>System Funding Item</label>
    <nameField>
        <label>System Funding Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Funding Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>